# hakaru-examples

./: .gitignore  .trash  2normals.hk  ChangeLog.md  LICENSE  Makefile  README.md  array.hk  datumTriple.hk  default.nix  dirac1.hk  foo.c  hkc-test.cabal  lamMeasure.hk  lamSum.hk  letarray.hk  matchBool.hk  multifunc.hk  music.hk  normal.hk  prob2.hk  prob3.hk  prob4.hk  simp.hk  simp_hello2.hk  sum2uniform.hk  sum3uniform.hk  sumUniform.hk  superpose1b.hk  superpose2.hk  triple.hk  tugofwar.hk  underflow.hk
data/: array1000Nat.csv  array1000Real.csv  array10Nat.csv
data/topic_models/: docs  word_prior  words
demo/: array.hk  match.hk
docs/: update.tex
src/: Main.hs
src/c/: arrayLit.c  closure.c  matchBool.c  matchNested.c  true.c  uniform.c
src/hakaru/: 2datadecl.hk  2normals.hk  MissingData.hk  addInt2.hk  addProb1.hk  array.hk  array2.hk  arrayCoersion.hk  arrayIndex.hk~  closure.hk  closure2.hk  closureMulti.hk  defFuns.hk  factorial.hk  heirarchicalLogisticRegression.hk  id.hk  lam.hk  lam2.hk  linearModel.hk  logisticRegression.hk  matchMaybe.hk  matchMaybe2.hk  matchNested.hk  matchNested.hk~  matchPair.hk  matchPair2.hk  measureBeta.hk  measureCategorical.hk  measureCategorical3.hk  measureGamma.hk  measureUniform.hk  perceptronTrain.hk  plate.hk  plate1.hk  plateDirac.hk  plateNormal.hk  plateUniform.hk  prob2b.hk  prob4.hk  probProd.hk  (+21 more)
src/haskell/: bucketTests.hs
tests/c/: addInt2.c  addProb1.c  addProb2.c  array.c  arrayIndex.c  arraySize.c  dirac.c  false.c  normal.c
tests/hakaru/: addProb2.hk  arrayIndex.hk  arrayLit.hk  arrayLitPretty.hk  arrayReduceNoBind.hk  arraySize.hk  asignal.hk  binaryAnd.hk  binaryAnd2.hk  boolEq.hk  boolNot.hk  closure1.hk  closure3.hk  closureCapture.hk  datadeclThen42.hk  dirac2.hk  diracBound.hk  (+66 more)
(+15 files in other folders)
