name:                hkc-test
version:             0.0.1.0
synopsis:            Testing the HKC Hakaru compiler
homepage:            zachsully.com
license:             BSD3
license-file:        LICENSE
author:              Zach Sullivan
maintainer:          zsulliva@cs.uoregon.edu
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable hkc-test
  main-is:             Main.hs
  -- other-modules:

  build-depends:       base >=4.9 && <4.10,
                       process >=1.4 && <1.5,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       hakaru >= 0.4,
                       text >= 1.2
                       -- optparse-applicative >= 0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
